--- a/index.html
+++ b/index.html
@@ -10,70 +10,87 @@
 </head>
 <body>
   <header class="header container">
-
-    <div class="logo">
-      <div class="text">
-        <img class="toyota-logo" src="./image/logo_toyota@2x.png">
-        <h2>CAREER<br>RECROUTING</h2>
-        <p>キャリア採用情報</p>
+    <nav class="nav">
+      <div class="logo">
+        <div class="text">
+          <img class="toyota-logo" src="./image/logo_toyota@2x.png">
+          <h2>CAREER<br>RECROUTING</h2>
+          <p>キャリア採用情報</p>
+        </div>
       </div>
-    </div>
-    <div class="header-nav">
-      <nav class="nav">
+      <div class="header-nav">
         <div class="dropdown-info">
-          <button class="dropbtn">
-            募集職種検索<span class="fas fa-search"></span>
-          </button>
-          <div class="dropdown-content">
-            <a href="#">技術系募集募集職種</a>
-            <a href="#">事務系募集職種</a>
-            <a href="#">新卒博士</a>
+          <div class="dropbtn">募集職種検索<span class="fas fa-search"></span></div>
+          <ul class="dropdown-list">
+            <li><a href="#">技術系募集募集職種<span class="fas fa-arrow-right"></span></a></li>
+            <li><a href="#">事務系募集職種<span class="fas fa-arrow-right"></span></a></li>
+            <li><a href="#">新卒博士<span class="fas fa-arrow-right"></span></a></li>
+          </ul>
+        </div>
+        <div class="info-link">
+          <ul>
+            <li>
+              <a href="#">
+                トヨタを知る
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                メッセージ
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                社員インタビュー
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                福利厚生と職場環境
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                応募要領・選考プロセス
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                よくあるご質問
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="header-end">
+          <div class="text-area">
+            <div class="text">
+              <div class="feature-logo">FEATURE</div>
+              <div class="feature-text">ITエンジニアの方々が注目！<br>キーワードはCASE</div>
+            </div>
+            <div class="right-icon"><span class="fas fa-arrow-right"></span></div>
           </div>
         </div>
-
-        <ul>
-          <li>
-            <a href="#">
-              <p>トヨタを知る</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <p>メッセージ</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <p>社員インタビュー</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <p>福利厚生と職場環境</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <p>応募要領・選考プロセス</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <p>よくあるご質問</p>
-            </a>
-          </li>
-        </ul>
-        <div class="header-end">
-          <img src="#">
-          <h3>ITエンジニアの方々が注目！<br>キーワードはCASE</h3>
+      </div>
+    </nav>
+  </header>
+  <main class="container">
+    <div class="contents-area">
+      <div class="article1">
+        <div class="about">
+          <div>FEATURE</div>
+          <div>特集</div>
+          <div>IoT機器・クルマで<br>つくるモビリティ社会は<br>”CASE"にあり</div>
+          <div><span class="fas fa-arrow-right"></span></div>
+        </div>
+        <div class="image-area">
           <img src="#">
         </div>
-
-      </nav>
+      </div>
+      <div class="article"></div>
+      <div class="article"></div>
+      <div class="article"></div>
     </div>
-  </header>
-  </header>
-  <main></main>
+  </main class="container">
   <footer></footer>
 </body>
 </html>
