--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
           </ul>
         </div>
         <div class="header-end">
-          <div class="text-area">
+          <div class="header-text-area">
             <div class="text">
               <div class="feature-logo">FEATURE</div>
               <div class="feature-text">ITエンジニアの方々が注目！<br>キーワードはCASE</div>
             </div>
-            <div class="right-icon"><span class="fas fa-arrow-right"></span></div>
+            <div class="feature-icon"><span class="fas fa-arrow-right"></span></div>
           </div>
         </div>
       </div>
@@ -75,19 +75,116 @@
   </header>
   <main class="container">
     <div class="contents-area">
-      <div class="article1">
-        <div class="about">
-          <div>FEATURE</div>
-          <div>特集</div>
-          <div>IoT機器・クルマで<br>つくるモビリティ社会は<br>”CASE"にあり</div>
-          <div><span class="fas fa-arrow-right"></span></div>
+      <!-- 記事１ -->
+      <div class="article1 row">
+        <div class="article1-left">
+          <div class="article-title">
+            <div class="bigtext">FEATURE<span class="smalltext">特集</span></div>
+          </div>
+          <div class="article-text">IoT機器・クルマで<br>つくるモビリティ社会は<br>”CASE"にあり</div>
+          <div class="right-icon"><span class="fas fa-arrow-right"></span></div>
         </div>
-        <div class="image-area">
-          <img src="#">
+
+        <div class="article1-right">
+          <img class="article1-img" src="./image/typewriter-801921_1920.jpg"></img>
         </div>
       </div>
-      <div class="article"></div>
-      <div class="article"></div>
+      <!-- /記事１ -->
+      <!-- 記事2 -->
+      <div class="article2 row">
+        <div class="article2-left">
+          <img class="article-img" src="./image/typewriter-801921_1920.jpg"></img>
+          <div class="article2-text-area text-white">
+            <div class="article2-title">
+              <div class="bigtext">KEY PERSON<span class="smalltext">キーパーソン</span></div>
+            </div>
+            <div class="article2-text1">コネクティッドは<br>社会づくりだ。</div>
+            <div class="article2-text2">コネクティッドカンパニー<br>村田 賢一</div>
+          </div>
+        </div>
+        <!-- /記事2 -->
+        <!-- 記事3 -->
+        <div class="article3-right">
+          <div class="article3-title">
+            <div class="bigtext">FINDOUT<span class="smalltext">募集職種検索</span></div>
+          </div>
+          <ul class="job-list">
+            <li>
+              <a href="#">
+                <div class="joblist-text">
+                  <span class="fas fa-search"></span>
+                  技術系募集募集職種
+                  <span class="fas fa-arrow-right"></span>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div class="joblist-text">
+                  <span class="fas fa-search"></span>
+                  事務系募集職種
+                  <span class="fas fa-arrow-right"></span>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div class="joblist-text">
+                  <span class=" fas fa-search"></span>
+                  新卒博士
+                  <span class="fas fa-arrow-right"></span>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!-- /記事3 -->
+      <!-- 記事4 -->
+      <div class="article4">
+        <div class="article4-contentarea position-rel">
+          <div class="article4-title">
+            <div class="bigtext">ABOUT TOYAMA<span class="smalltext">トヨタを知る</span></div>
+          </div>
+          <div class="index-page-link">
+            <a href="#">
+              <div class="link-text">
+                INDEX PAGE<span class="fas fa-arrow-right"></span>
+              </div>
+            </a>
+          </div>
+          <div class="page-link-area row">
+            <div class="inside-toyota">
+              <a href="#">
+                <img class="position-rel" src="./image/thumb_about-01@2x.jpg">
+                <div class="position-abs content-1">
+                  <h2>INSIDE TOYOTA<span class="fas fa-arrow-right"></span></h2>
+                  <p>社内情報発信サイトであるインサイドトヨタで、飾らないトヨタの”今”を是非ご覧ください</p>
+                </div>
+              </a>
+            </div>
+            <div class="news-room">
+              <a href="#">
+                <img class="position-rel" src="./image/thumb_about-02@2x.jpg">
+                <div class="position-abs content-2">
+                  <h2>NEWS ROOM<span class="fas fa-arrow-right"></span></h2>
+                  <p>トヨタに関するニュースを写真、動画等、さまざまなカタチで毎日お届けしています。新しいトヨタを発見していただけたら嬉しいです。</p>
+                </div>
+              </a>
+            </div>
+            <div class="toyotaimes">
+              <a href="#">
+                <img class="position-rel" src="./image/thumb_about-03@2x.jpg">
+                <div class="position-abs content-2">
+                  <h2>トヨタイムズ<span class="fas fa-arrow-right"></span></h2>
+                  <p>クルマの時代から、もっと自由に稼働を楽しむモビリティの時代へ。この大きな変化を伝えていくメディアです。</p>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /記事4 -->
       <div class="article"></div>
     </div>
   </main class="container">
