--- a/index.html
+++ b/index.html
@@ -185,7 +185,10 @@
         </div>
       </div>
       <!-- /記事4 -->
-      <div class="article"></div>
+      <!-- 記事5 -->
+      <div class="article5"></div>
+      <!-- /記事5 -->
+
     </div>
   </main class="container">
   <footer></footer>
